[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/UI/locked_character_icon.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/ui/CharacterSelectionUI.gd" type="Script" id=3]
[ext_resource path="res://assets/UI/empty_character_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/textbox.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/player_character_icon.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/glaciela_character_icon.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/quiticon.png" type="Texture" id=8]
[ext_resource path="res://themes/Blur.tres" type="Material" id=9]
[ext_resource path="res://assets/UI/button.png" type="Texture" id=10]
[ext_resource path="res://assets/UI/button_pressed.png" type="Texture" id=11]
[ext_resource path="res://assets/UI/long_button.png" type="Texture" id=12]
[ext_resource path="res://assets/UI/long_button_pressed.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[node name="CharacterSelectionUI" type="CanvasLayer"]
pause_mode = 2

[node name="Control" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -540.0
margin_top = -360.0
margin_right = 540.0
margin_bottom = 360.0
script = ExtResource( 3 )

[node name="Blur" type="ColorRect" parent="Control"]
material = ExtResource( 9 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1176.64
margin_top = -639.091
margin_right = 2063.36
margin_bottom = 1520.91
color = Color( 1, 1, 1, 0 )

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -324.0
margin_top = -232.0
margin_right = 324.0
margin_bottom = 200.0
texture = ExtResource( 5 )
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="Header" type="RichTextLabel" parent="Control/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.498
anchor_right = 0.5
anchor_bottom = 0.498
margin_left = -239.5
margin_top = -205.136
margin_right = 239.5
margin_bottom = -157.136
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "== [color=#ffd703]Character Selection[/color] =="
text = "== Character Selection =="
scroll_active = false

[node name="CharacterSlot1" type="TextureButton" parent="Control/NinePatchRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -147.0
margin_right = 210.0
margin_bottom = 33.0
texture_normal = ExtResource( 4 )
expand = true

[node name="CharacterSlot2" type="TextureButton" parent="Control/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -147.0
margin_right = 90.0
margin_bottom = 33.0
texture_normal = ExtResource( 4 )
expand = true

[node name="CharacterSlot3" type="TextureButton" parent="Control/NinePatchRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -147.0
margin_right = -30.0
margin_bottom = 33.0
texture_normal = ExtResource( 4 )
expand = true

[node name="SelectCharactersUI" type="Control" parent="Control/NinePatchRect"]
margin_left = -54.0
margin_top = -36.0
margin_right = -14.0
margin_bottom = 4.0

[node name="CloseButtonMainUI" type="TextureButton" parent="Control/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -324.0
margin_top = -216.0
margin_right = -284.0
margin_bottom = -176.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearSlot1" type="TextureButton" parent="Control/NinePatchRect"]
anchor_left = 0.185
anchor_top = 0.671
anchor_right = 0.185
anchor_bottom = 0.671
margin_left = -59.88
margin_top = -29.872
margin_right = -43.88
margin_bottom = -21.872
rect_scale = Vector2( 7.5, 7.5 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )

[node name="EnterLevelButton" type="TextureButton" parent="Control/NinePatchRect"]
anchor_left = 0.502
anchor_top = 0.877
anchor_right = 0.502
anchor_bottom = 0.877
margin_left = -120.296
margin_top = -29.864
margin_right = -88.296
margin_bottom = -21.864
rect_scale = Vector2( 7.5, 7.5 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )

[node name="Label" type="Label" parent="Control/NinePatchRect"]
anchor_left = 0.185
anchor_top = 0.676
anchor_right = 0.185
anchor_bottom = 0.676
margin_left = -59.88
margin_top = -24.032
margin_right = 60.12
margin_bottom = 23.968
custom_fonts/font = SubResource( 4 )
text = "Clear"
align = 1

[node name="ClearSlot2" type="TextureButton" parent="Control/NinePatchRect"]
anchor_left = 0.502
anchor_top = 0.671
anchor_right = 0.502
anchor_bottom = 0.671
margin_left = -60.296
margin_top = -29.872
margin_right = -44.296
margin_bottom = -21.872
rect_scale = Vector2( 7.5, 7.5 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )

[node name="Label2" type="Label" parent="Control/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.676
anchor_right = 0.5
anchor_bottom = 0.676
margin_left = -59.0
margin_top = -24.032
margin_right = 61.0
margin_bottom = 23.968
custom_fonts/font = SubResource( 4 )
text = "Clear"
align = 1

[node name="ClearSlot3" type="TextureButton" parent="Control/NinePatchRect"]
anchor_left = 0.818
anchor_top = 0.671
anchor_right = 0.818
anchor_bottom = 0.671
margin_left = -60.064
margin_top = -29.872
margin_right = -44.064
margin_bottom = -21.872
rect_scale = Vector2( 7.5, 7.5 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )

[node name="Label3" type="Label" parent="Control/NinePatchRect"]
anchor_left = 0.818
anchor_top = 0.676
anchor_right = 0.818
anchor_bottom = 0.676
margin_left = -60.064
margin_top = -24.032
margin_right = 59.936
margin_bottom = 23.968
custom_fonts/font = SubResource( 4 )
text = "Clear"
align = 1

[node name="Label4" type="Label" parent="Control/NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.944
anchor_right = 0.5
anchor_bottom = 0.944
margin_left = -106.0
margin_top = -51.808
margin_right = 107.0
margin_bottom = -3.80801
custom_fonts/font = SubResource( 4 )
text = "Enter Stage"
align = 1

[node name="PartyCannotBeEmptyLabel" type="Label" parent="Control/NinePatchRect"]
visible = false
anchor_left = 0.5
anchor_top = 1.093
anchor_right = 0.5
anchor_bottom = 1.093
margin_left = -210.0
margin_top = -39.176
margin_right = 210.0
margin_bottom = 8.82397
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Party cannot be empty."
align = 1

[node name="CharacterOptionsList" type="Control" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -540.0
margin_top = -264.0
margin_right = 540.0
margin_bottom = 456.0

[node name="Blur" type="ColorRect" parent="Control/CharacterOptionsList"]
material = ExtResource( 9 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1176.64
margin_top = -639.091
margin_right = 2063.36
margin_bottom = 1520.91
color = Color( 1, 1, 1, 0 )

[node name="NinePatchRect" type="NinePatchRect" parent="Control/CharacterOptionsList"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.0
margin_top = -278.5
margin_right = 232.0
margin_bottom = 78.5
texture = ExtResource( 5 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="Header" type="RichTextLabel" parent="Control/CharacterOptionsList"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -181.0
margin_top = -268.0
margin_right = 181.0
margin_bottom = -220.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[color=#ffd703]Choose a character[/color]"
text = "Choose a character"
scroll_active = false

[node name="CharacterPlayer" type="TextureButton" parent="Control/CharacterOptionsList"]
margin_left = 359.0
margin_top = 159.0
margin_right = 379.0
margin_bottom = 179.0
rect_scale = Vector2( 5, 5 )
texture_normal = ExtResource( 6 )

[node name="CharacterGlaciela" type="TextureButton" parent="Control/CharacterOptionsList"]
margin_left = 490.0
margin_top = 159.0
margin_right = 510.0
margin_bottom = 179.0
rect_scale = Vector2( 5, 5 )
texture_normal = ExtResource( 7 )

[node name="CharacterAgnette" type="TextureButton" parent="Control/CharacterOptionsList"]
margin_left = 621.0
margin_top = 159.0
margin_right = 641.0
margin_bottom = 179.0
rect_scale = Vector2( 5, 5 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )

[node name="Character4" type="TextureButton" parent="Control/CharacterOptionsList"]
margin_left = 359.0
margin_top = 280.0
margin_right = 379.0
margin_bottom = 300.0
rect_scale = Vector2( 5, 5 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )

[node name="Character5" type="TextureButton" parent="Control/CharacterOptionsList"]
margin_left = 490.0
margin_top = 280.0
margin_right = 510.0
margin_bottom = 300.0
rect_scale = Vector2( 5, 5 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )

[node name="Character6" type="TextureButton" parent="Control/CharacterOptionsList"]
margin_left = 621.0
margin_top = 280.0
margin_right = 641.0
margin_bottom = 300.0
rect_scale = Vector2( 5, 5 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )

[node name="CloseButtonCharacterOptionsListUI" type="TextureButton" parent="Control/CharacterOptionsList"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.0
margin_top = -278.5
margin_right = -192.0
margin_bottom = -238.5
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlreadySelected" type="Label" parent="Control/CharacterOptionsList"]
visible = false
anchor_left = 0.5
anchor_top = 0.499
anchor_right = 0.5
anchor_bottom = 0.499
margin_left = -228.0
margin_top = 190.72
margin_right = 228.0
margin_bottom = 222.72
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Character has already been selected."
align = 1

[connection signal="pressed" from="Control/NinePatchRect/CharacterSlot1" to="Control" method="_on_CharacterSlot1_pressed"]
[connection signal="pressed" from="Control/NinePatchRect/CharacterSlot2" to="Control" method="_on_CharacterSlot2_pressed"]
[connection signal="pressed" from="Control/NinePatchRect/CharacterSlot3" to="Control" method="_on_CharacterSlot3_pressed"]
[connection signal="pressed" from="Control/NinePatchRect/CloseButtonMainUI" to="Control" method="_on_CloseButtonMainUI_pressed"]
[connection signal="pressed" from="Control/NinePatchRect/ClearSlot1" to="Control" method="_on_ClearSlot1_pressed"]
[connection signal="pressed" from="Control/NinePatchRect/EnterLevelButton" to="Control" method="_on_EnterLevelButton_pressed"]
[connection signal="pressed" from="Control/NinePatchRect/ClearSlot2" to="Control" method="_on_ClearSlot2_pressed"]
[connection signal="pressed" from="Control/NinePatchRect/ClearSlot3" to="Control" method="_on_ClearSlot3_pressed"]
[connection signal="pressed" from="Control/CharacterOptionsList/CharacterPlayer" to="Control" method="_on_CharacterPlayer_pressed"]
[connection signal="pressed" from="Control/CharacterOptionsList/CharacterGlaciela" to="Control" method="_on_CharacterGlaciela_pressed"]
[connection signal="pressed" from="Control/CharacterOptionsList/CharacterAgnette" to="Control" method="_on_CharacterAgnette_pressed"]
[connection signal="pressed" from="Control/CharacterOptionsList/CloseButtonCharacterOptionsListUI" to="Control" method="_on_CloseButtonCharacterOptionsListUI_pressed"]
